--- a/UnityProject/Packages/manifest.json
+++ b/UnityProject/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "com.unity.analytics": "3.3.2",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.analytics": "3.6.11",
+    "com.unity.collab-proxy": "1.9.0",
+    "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.textmeshpro": "3.0.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
